Add base configuration

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/white"
-  tools:context=".ui.main.MainActivity">
+  android:background="@color/white">
 
   <com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
     android:background="@color/white"
@@ -21,19 +20,24 @@
 
   </com.google.android.material.appbar.AppBarLayout>
 
+  <androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <WebView
+      android:id="@+id/webView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" />
+
+  </androidx.core.widget.NestedScrollView>
+
   <me.zhanghai.android.materialprogressbar.MaterialProgressBar
     android:id="@+id/progressCircle"
     style="@style/Widget.MaterialProgressBar.ProgressBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:indeterminate="true"
-    app:mpb_progressStyle="circular" />
-
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+    android:indeterminate="true" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
